# legal-court-mcp-server

./: README.md  pyproject.toml
src/: server.py
src/clients/: courtlistener.py
src/tools/: legal.py
